# mipt-flat-2020-practice2

./: .gitignore  CMakeLists.txt  Earley.cpp  Earley.hpp  main.cpp  test.cpp
